--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap" rel="stylesheet" />
-		<title>Liron UX/UI designer</title>
+		<title>Liron Gez</title>
 	</head>
 	<body>
 		<div id="root"></div>
